El ultimo de hoy

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="hero-description">
             <h3>What's in my mind</h3>
-            <p>We can develop and design anything beyond your ima gination. About our work, we don’t say anything bec ause our work speaks.
-                 For more, you can ask our clie nts and they will tell you how much satisfied they are with our services. So, what are you waiting for?</p>
+            <p>We can develop and design anything beyond your imagination. About my work, I don’t say anything because my work speaks.
+                 For more, you can ask my clients and they will tell you how much satisfied they are with my job. So, what are you waiting for?</p>
         </div>
     </section>
     <main>
@@ -92,78 +92,44 @@
             <div class="container-skills">
                 <h3 class="skills-title">Professional skills</h3>
                 <ul class="habilities-list">
-<<<<<<< HEAD
                     <li class="hability" id="javascript">
-=======
-                    <li class="hability">
->>>>>>> 5fe31fb2e3a824b5171489a9f10b5a0b5bb259ef
                         <span class="name">JavaScript</span>
                         <span class="percent">65%</span>
                         <div class="bar">
                             <div class="advance"></div>
                         </div>
                     </li>
-<<<<<<< HEAD
                     <li class="hability" id="python">
                         <span class="name">Python</span>
                         <span class="percent">80%</span>
-=======
-                    <li class="hability">
-                        <span class="name">JavaScript</span>
-                        <span class="percent">65%</span>
->>>>>>> 5fe31fb2e3a824b5171489a9f10b5a0b5bb259ef
                         <div class="bar">
                             <div class="advance"></div>
                         </div>
                     </li>
-<<<<<<< HEAD
                     <li class="hability" id="java">
                         <span class="name">Java</span>
                         <span class="percent">53%</span>
-=======
-                    <li class="hability">
-                        <span class="name">JavaScript</span>
-                        <span class="percent">65%</span>
->>>>>>> 5fe31fb2e3a824b5171489a9f10b5a0b5bb259ef
                         <div class="bar">
                             <div class="advance"></div>
                         </div>
                     </li>
-<<<<<<< HEAD
                     <li class="hability" id="html-know">
                         <span class="name">HTML</span>
                         <span class="percent">90%</span>
-=======
-                    <li class="hability">
-                        <span class="name">JavaScript</span>
-                        <span class="percent">65%</span>
->>>>>>> 5fe31fb2e3a824b5171489a9f10b5a0b5bb259ef
                         <div class="bar">
                             <div class="advance"></div>
                         </div>
                     </li>
-<<<<<<< HEAD
                     <li class="hability" id="css-know">
                         <span class="name">CSS</span>
                         <span class="percent">70%</span>
-=======
-                    <li class="hability">
-                        <span class="name">JavaScript</span>
-                        <span class="percent">65%</span>
->>>>>>> 5fe31fb2e3a824b5171489a9f10b5a0b5bb259ef
                         <div class="bar">
                             <div class="advance"></div>
                         </div>
                     </li>
-<<<<<<< HEAD
                     <li class="hability" id="cpp">
                         <span class="name">C++</span>
                         <span class="percent">30%</span>
-=======
-                    <li class="hability">
-                        <span class="name">JavaScript</span>
-                        <span class="percent">65%</span>
->>>>>>> 5fe31fb2e3a824b5171489a9f10b5a0b5bb259ef
                         <div class="bar">
                             <div class="advance"></div>
                         </div>
@@ -172,7 +138,7 @@
             </div>
             <div class="container-languages">
                 <h3 class="languages">Languages skills</h3>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit illo minima ad! Corrupti quod, fuga minima assumenda voluptate perspiciatis atque similique repudiandae possimus officiis est beatae tempora voluptatibus illo. Deleniti?</p>
+                <p class="description"></p>
                 <div class="language-bar">
                 </div>
                 <div class="language-bar">
