--- a/index.html
+++ b/index.html
@@ -3,257 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevDuxAaron</title>
+    <title>Aaron</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/tablet.css" media="screen and (max-width: 768px)">
-    <link rel="stylesheet" href="./styles/mobile.css" media="screen and (max-width: 440px)">
+    <link rel="stylesheet" href="./styles/tablet.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 440px)">
     <meta name="description" content="Construye tu sitio web de la mano de un experto">
     <link rel="shortcut icon" href="./assets/logo.jpg">
+    <script src="https://cdnjs.cloudfare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 </head>
 <body>
-    <section class="hero">
-        <picture class="hero-image">
-            <source srcset="./assets/normal.png" media="min-width:1023px">
-            <img src="./assets/small.png" alt="photo profile">
-        </picture>
-        <div class="hero-title">
-            <h1>DevDuxAaron</h1>
-            <h3>Frontend developer</h3>
+    <header class="wow zoomIn" id="home">
+        <div class="logo">
+            <h1>AARON</h1>
         </div>
-        <div class="hero-social">
-            <a href="" class="github"></a>
-            <a href="" class="twitter"></a>
-            <a href="" class="instagram"></a>
-            <a href="" class="linkedin"></a>
-        </div>
-        <div class="hero-description">
-            <h3>What's in my mind</h3>
-            <p>We can develop and design anything beyond your imagination. About my work, I don’t say anything because my work speaks.
-                 For more, you can ask my clients and they will tell you how much satisfied they are with my job. So, what are you waiting for?</p>
-        </div>
-    </section>
-    <main>
-        <nav class="menu">
-            <!-- <div class="menu-logo">Hello</div> -->
-            <div class="burger">
-                <a href="#home" class="burger-home">Home</a>
-                <a href="#aboutMe" class="burger-about">About</a>
-                <a href="#skills" class="burger-skill">Skill</a>
-                <a href="#portfolio" class="burger-portfolio">Portfolio</a>
-                <a href="#exercises" class="burger-blog">Exercises</a>
-                <a href="#contact" class="burger-contact">Contact</a>
-            </div>
+        <nav class="navigation">
+            <ul>
+                <li><a href="#home1">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </nav>
-        <section class="home" id="home">
-            <picture class="profile">
-                <source srcset="./assets/normal.png" media="min-width:1023px">
-                <img src="./assets/small.png" alt="">
-            </picture>
-            <h1>Hello</h1>
-            <h3>My name is Aaron</h3>
-            <p>I enjoy building websites from small businesses to robust web applications.</p>
-            <a href="" class="button-blue">View Portfolio</a>
-        </section>
-        <section class="aboutMe" id="aboutMe">
-            <h2><i></i>About me</h2>
-            <p>This page is still on development.
-                Hello,I’m Aaron Joel Creative Frontend Developer,
-                I create digital Products for Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, illum alias illo amet magnam maxime. Quia, dolore. Architecto dignissimos veniam consequatur! Iusto sed nisi voluptatum debitis, inventore fugit amet beatae.
-            </p>
-            <div class="container-aboutMe">
-                <!-- <div class="aboutMe-menu">
-                    <div class="logo">Logo Design</div>
-                    <div class="websites">Websites</div>
-                    <div class="software">Software</div>
-                    <div class="apps">Applications</div>
-                </div> -->
-                <div class="aboutMe-details">
-                    <h3>Personal details</h3>
-                    <div class="aboutMe-list">
-                        <ul class="list-field">
-                            <li class="field">Name</li>
-                            <li class="field">Email</li>
-                            <li class="field">Website</li>
-                        </ul>
-                        <ul class="list-dots">
-                            <li class="dots">:</li>
-                            <li class="dots">:</li>
-                            <li class="dots">:</li>
-                        </ul>
-                        <ul class="list-data">
-                            <li class="data">Aaron Joel</li>
-                            <li class="data">devduxaaron@gmail.com</li>
-                            <li class="data">devduxaaron.github.io</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <a href="" class="button-blue">Hire Me</a>
-        </section>
-        <section class="skills" id="skills">
-            <h2><i></i>My skills</h2>
-            <p> I have a diverse set of skills, ranging from design,
-                 to HTML, CSS, Grid Layout, Responsive Desing, Javascript,
-                 Bootstrap, Version control with Git and SCRUM
-            </p>
-            <div class="container-skills">
-                <h3 class="skills-title">Professional skills</h3>
-                <ul class="habilities-list">
-                    <li class="hability" id="javascript">
-                        <span class="name">JavaScript</span>
-                        <span class="percent">65%</span>
-                        <div class="bar">
-                            <div class="advance"></div>
-                        </div>
-                    </li>
-                    <li class="hability" id="python">
-                        <span class="name">Python</span>
-                        <span class="percent">80%</span>
-                        <div class="bar">
-                            <div class="advance"></div>
-                        </div>
-                    </li>
-                    <li class="hability" id="java">
-                        <span class="name">Java</span>
-                        <span class="percent">53%</span>
-                        <div class="bar">
-                            <div class="advance"></div>
-                        </div>
-                    </li>
-                    <li class="hability" id="html-know">
-                        <span class="name">HTML</span>
-                        <span class="percent">90%</span>
-                        <div class="bar">
-                            <div class="advance"></div>
-                        </div>
-                    </li>
-                    <li class="hability" id="css-know">
-                        <span class="name">CSS</span>
-                        <span class="percent">70%</span>
-                        <div class="bar">
-                            <div class="advance"></div>
-                        </div>
-                    </li>
-                    <li class="hability" id="cpp">
-                        <span class="name">C++</span>
-                        <span class="percent">30%</span>
-                        <div class="bar">
-                            <div class="advance"></div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="container-languages">
-                <h3 class="languages">Languages skills</h3>
-                <p class="description">Strong knowledge on English and Spanish. Got graduated form the CBA as an honor student.</p>
-                <div class="language-bar">
-                </div>
-                <div class="language-bar">
-                </div>
-            </div>
-        </section>
-        <section class="portfolio" id="portfolio">
-            <h2><i></i>My Portfolio</h2>
-            <p> Here are some projects that I've worked on. Coming soon!
-            </p>
-            <!-- Soon -->
-            <!-- <nav class="menu-selected">
-                <ul>
-                    <li class="filter">All</li>
-                    <li class="filter">Logos</li>
-                    <li class="filter">Websites</li>
-                    <li class="filter">Apps</li>
-                    <li class="filter">Games</li>
-                </ul>
-            </nav> -->
-            <!-- <div class="portfolio-projects">
-                <a class="project" href=""><img src="" alt=""></a>
-                <a class="project" href=""><img src="" alt=""></a>
-                <a class="project" href=""><img src="" alt=""></a>
-                <a class="project" href=""><img src="" alt=""></a>
-                <a class="project" href=""><img src="" alt=""></a>
-                <a class="project" href=""><img src="" alt=""></a>
-            </div>
-            <a href="" class="button-blue">More</a> -->
-        </section>
-        <section class="exercises" id="exercises">
-            <h2><i></i>Solved Exercises</h2>
-            <p> Some of the exercises that I've solved. Coming soon!
-            </p>
-            <!-- Soon -->
-            <!-- <nav class="menu-selected">
-                <ul>
-                    <li class="filter">All</li>
-                    <li class="filter">Jvumsa</li>
-                    <li class="filter">UVA</li>
-                    <li class="filter">TopCoder</li>
-                    <li class="filter">Others</li>
-                </ul>
-            </nav> -->
-            <!-- <div class="exercises-list">
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-                <a class="exercise" href="">
-                    <img src="https://jv.umsa.bo/template/sam/image/juez-patito2.svg" alt="">
-                    <h4>Id: 1987</h4>
-                </a>
-            </div>
-            <a href="" class="button-blue">More</a> -->
-        </section>
-        <section class="contact" id="contact">
-            <h2><i></i>Contact Me</h2>
-            <p> We can develop and design anything beyond your imagination.
-                 About my work, I don’t say anything because my work speaks.
-                  For more, you can ask my clients and they will tell you how much satisfied they are with my job.
-                   So, what are you waiting for?
-            </p>
-            <a href="" class="button-blue">Hire Me</a>
-            <div class="contact-form">
-                <!-- pending -->
-            </div>
-        </section>
-    </main>
+        <div class="hamburger">
+            <div class="line line1"></div>
+            <div class="line line2"></div>
+            <div class="line line3"></div>
+        </div>
+    </header>
 </body>
 </html>
