Inicio nuevo portfolio

--- a/index.html
+++ b/index.html
@@ -1,35 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aaron</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/tablet.css" media="screen and (min-width: 768px)">
-    <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 440px)">
-    <meta name="description" content="Construye tu sitio web de la mano de un experto">
-    <link rel="shortcut icon" href="./assets/logo.jpg">
-    <script src="https://cdnjs.cloudfare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="./styles/tablet.css"
+      media="screen and (min-width: 768px)"
+    />
+    <link
+      rel="stylesheet"
+      href="./styles/desktop.css"
+      media="screen and (min-width: 440px)"
+    />
+    <meta
+      name="description"
+      content="Construye tu sitio web de la mano de un experto"
+    />
+    <link rel="shortcut icon" href="./assets/logo.jpg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  </head>
+  <body>
     <header class="wow zoomIn" id="home">
-        <div class="logo">
-            <h1>AARON</h1>
-        </div>
-        <nav class="navigation">
-            <ul>
-                <li><a href="#home1">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="hamburger">
-            <div class="line line1"></div>
-            <div class="line line2"></div>
-            <div class="line line3"></div>
-        </div>
+      <div class="logo">
+        <h1>AARON</h1>
+      </div>
+      <nav class="navigation">
+        <ul>
+          <li><a href="#home1">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="hamburger">
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+        <div class="line line3"></div>
+      </div>
     </header>
-</body>
+    <main class="main-header" id="home1">
+      <section class="welcome">
+        <div class="greeting">
+          <h3 class="title-3">HEY, I'm <span>Aaron</span> Web Developer</h3>
+        </div>
+        <div class="image">
+          <figure class="photo">
+            <source media="(min-width: )" srcset="" />
+            <img src="" alt="aaron-photo" />
+          </figure>
+        </div>
+        <div class="social">
+          <ul>
+            <li class="icon"></li>
+            <li class="icon"></li>
+            <li class="icon"></li>
+          </ul>
+        </div>
+      </section>
+      <section class="about" id="about">
+        <div class="title">
+          <h3 class="title-3">ABOUT</h3>
+        </div>
+        <figure class="about-photo">
+          <source media="(min-width: )" srcset="" />
+          <img src="" alt="aaron-photo" />
+        </figure>
+        <div class="description">
+          <h3 class="title-3">I'm Aaron</h3>
+          <p class="text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores
+            esse excepturi natus, doloribus quisquam, sit eaque eos error
+            temporibus iste nobis, voluptates quis tempore quibusdam unde
+            sapiente vero rerum ut?
+          </p>
+        </div>
+      </section>
+      <section class="skills" id="skills">
+        <div class="title">
+          <h3 class="title-3">SKILLS</h3>
+        </div>
+        <div class="badges">
+            <div class="hability">
+                <span class="name">HTML 5</span>
+                <span class="percent">92%</span>
+                <div class="bar"></div>
+            </div>
+            <div class="hability">
+                <span class="name">HTML 5</span>
+                <span class="percent">92%</span>
+                <div class="bar"></div>
+            </div>
+            <div class="hability">
+                <span class="name">HTML 5</span>
+                <span class="percent">92%</span>
+                <div class="bar"></div>
+            </div>
+            <div class="hability">
+                <span class="name">HTML 5</span>
+                <span class="percent">92%</span>
+                <div class="bar"></div>
+            </div>
+        </div>
+        <div class="image">
+          <figure class="photo">
+            <source media="(min-width: )" srcset="" />
+            <img src="" alt="aaron-photo" />
+          </figure>
+        </div>
+      </section>
+      <!-- <section class="work" id="work">
+          <div class="gallery"></div>
+      </section> -->
+      <section class="contact" id="contact">
+        <div class="form-contact">
+            <form action="" method="get">
+                <!-- fullname, email, message, send -->
+            </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+        <div class="title">
+            <h3 class="title-4">Thank You</h3>
+        </div>
+        <div class="social-2">
+            <ul>
+              <li class="icon-2"></li>
+              <li class="icon-2"></li>
+              <li class="icon-2"></li>
+            </ul>
+          </div>
+    </footer>
+  </body>
 </html>
