cambios para accesibilidad

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       </div>
       <nav class="navigation">
         <ul>
-          <li><a href="#home1">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#home1" aria-label="to home" name="home">Home</a></li>
+          <li><a href="#about" aria-label="to about" name="about">About</a></li>
+          <li><a href="#skills" aria-label="to skills" name="skills">Skills</a></li>
+          <li><a href="#work" aria-label="to work" name="work">Work</a></li>
+          <li><a href="#contact" aria-label="to contact" name="contact">Contact</a></li>
         </ul>
       </nav>
       <div class="hamburger">
@@ -59,12 +59,12 @@
           <ul class="social">
             <!-- <li class="icon"><a href="" target="blank"><i class="icon-instagram"></i></a></li> -->
             <li class="icon">
-              <a href="https://twitter.com/42Joel54" target="blank"
+              <a href="https://twitter.com/42Joel54" target="blank" aria-label="link to twitter" name="twitter"
                 ><i class="icon-twitter"></i
               ></a>
             </li>
             <li class="icon">
-              <a href="https://github.com/DevDuxAaron" target="blank"
+              <a href="https://github.com/DevDuxAaron" target="blank" aria-label="link to github" name="github"
                 ><i class="icon-github"></i
               ></a>
             </li>
@@ -153,15 +153,14 @@
             </label>
             <label for="message" class="label-form content-message">
               <h4>Message</h4>
-              <input
-                type="text"
+              <textarea
                 id="message"
                 placeholder="I'd like to know more about..."
                 cols="40"
                 rows="5"
                 required
                 aria-required="true"
-              />
+              ></textarea>
             </label>
             <label for="send" class="label-form">
               <input
@@ -183,12 +182,12 @@
         <ul class="social">
           <!-- <li class="icon"><a href=""><i class="icon-instagram"></i></a></li> -->
           <li class="icon">
-            <a href="https://twitter.com/42Joel54" target="blank"
+            <a href="https://twitter.com/42Joel54" target="blank" aria-label="to twitter" name="twitter"
               ><i class="icon-twitter"></i
             ></a>
           </li>
           <li class="icon">
-            <a href="https://github.com/DevDuxAaron" target="blank"
+            <a href="https://github.com/DevDuxAaron" target="blank" aria-label="to github" name="github"
               ><i class="icon-github"></i
             ></a>
           </li>
