--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
               ></a>
             </li>
             <li class="icon">
+              <a href="https://devduxaaron.blogspot.com/" target="blank" aria-label="link to twitter" name="twitter"
+                ><i class="icon-blogger"></i
+              ></a>
+            </li>
+            <li class="icon">
               <a href="https://github.com/DevDuxAaron" target="blank" aria-label="link to github" name="github"
                 ><i class="icon-github"></i
               ></a>
@@ -181,6 +186,11 @@
           <li class="icon">
             <a href="https://twitter.com/42Joel54" target="blank" aria-label="to twitter" name="twitter"
               ><i class="icon-twitter"></i
+            ></a>
+          </li>
+          <li class="icon">
+            <a href="https://devduxaaron.blogspot.com/" target="blank" aria-label="link to twitter" name="twitter"
+              ><i class="icon-blogger"></i
             ></a>
           </li>
           <li class="icon">
