details on work section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
         <ul>
           <li><a href="#home1" aria-label="to home" name="home">Home</a></li>
           <li><a href="#about" aria-label="to about" name="about">About</a></li>
-          <li><a href="#skills" aria-label="to skills" name="skills">Skills</a></li>
+          <li>
+            <a href="#skills" aria-label="to skills" name="skills">Skills</a>
+          </li>
           <li><a href="#work" aria-label="to work" name="work">Work</a></li>
-          <li><a href="#contact" aria-label="to contact" name="contact">Contact</a></li>
+          <li>
+            <a href="#contact" aria-label="to contact" name="contact"
+              >Contact</a
+            >
+          </li>
         </ul>
       </nav>
       <div class="hamburger">
@@ -59,17 +65,29 @@
           <ul class="social">
             <!-- <li class="icon"><a href="" target="blank"><i class="icon-instagram"></i></a></li> -->
             <li class="icon">
-              <a href="https://twitter.com/42Joel54" target="blank" aria-label="link to twitter" name="twitter"
+              <a
+                href="https://twitter.com/42Joel54"
+                target="blank"
+                aria-label="link to twitter"
+                name="twitter"
                 ><i class="icon-twitter"></i
               ></a>
             </li>
             <li class="icon">
-              <a href="https://devduxaaron.blogspot.com/" target="blank" aria-label="link to twitter" name="twitter"
+              <a
+                href="https://devduxaaron.blogspot.com/"
+                target="blank"
+                aria-label="link to twitter"
+                name="twitter"
                 ><i class="icon-blogger"></i
               ></a>
             </li>
             <li class="icon">
-              <a href="https://github.com/DevDuxAaron" target="blank" aria-label="link to github" name="github"
+              <a
+                href="https://github.com/DevDuxAaron"
+                target="blank"
+                aria-label="link to github"
+                name="github"
                 ><i class="icon-github"></i
               ></a>
             </li>
@@ -94,8 +112,8 @@
           <p class="text">
             Hello! Aaron Joel. Front-End developer and university student. I
             define myself as a team player and an adventure soul. I face new
-            challenges with a proactive attitude, next to perseverance, and
-            a constant learning mindset.
+            challenges with a proactive attitude, next to perseverance, and a
+            constant learning mindset.
           </p>
         </article>
       </section>
@@ -126,16 +144,51 @@
           </div>
         </div>
       </section>
-      <!-- <section class="work" id="work">
-          <div class="gallery"></div>
-      </section> -->
-      <section class="contact" id="contact">
+      <section class="work" id="work">
+        <div class="title">
+          <h3 class="title-3">PROJECTS</h3>
+        </div>
+        <div class="gallery-container">
+          <article class="project-card">
+            <div class="top-section">
+              <img src="./assets/projects/batabit.png" />
+              <div class="menuicon">
+                <span class="s1"></span>
+                <span class="s2"></span>
+              </div>
+              <div class="card-name">
+                <span>Batabit</span><br>
+                By Aaron
+              </div>
+            </div>
+            <div class="info-section">
+              <h2>
+                About
+                <div class="border"></div>
+              </h2>
+              <p>
+                Project developed within a Platzi course. A web page for a Bitcoin and crypto currencies trading company.
+                 This page was developed with mobile first pattern. It's implemented from a Figma design and doesn't have any interactivy due to it's lacking 
+                 of Javascript.
+              </p>
+              <h2>
+                Visit
+                <div class="border"></div>
+              </h2>
+              <div class="s-m">
+                <a href="https://devduxaaron.github.io/Batabit/" class="fab">Project finished</a>
+                <a href="https://github.com/DevDuxAaron/Batabit" class="fab">Github repository</a>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!-- <section class="contact" id="contact">
         <div class="title">
           <h3 class="title-3">CONTACT</h3>
         </div>
         <div class="form-contact">
           <form action="" method="get" class="form">
-            <!-- fullname, email, message, send -->
             <label for="fullname" class="label-form">
               <h4>Fullname</h4>
               <input
@@ -174,7 +227,7 @@
             </label>
           </form>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
       <div class="title">
@@ -184,17 +237,29 @@
         <ul class="social">
           <!-- <li class="icon"><a href=""><i class="icon-instagram"></i></a></li> -->
           <li class="icon">
-            <a href="https://twitter.com/42Joel54" target="blank" aria-label="to twitter" name="twitter"
+            <a
+              href="https://twitter.com/42Joel54"
+              target="blank"
+              aria-label="to twitter"
+              name="twitter"
               ><i class="icon-twitter"></i
             ></a>
           </li>
           <li class="icon">
-            <a href="https://devduxaaron.blogspot.com/" target="blank" aria-label="link to twitter" name="twitter"
+            <a
+              href="https://devduxaaron.blogspot.com/"
+              target="blank"
+              aria-label="link to twitter"
+              name="twitter"
               ><i class="icon-blogger"></i
             ></a>
           </li>
           <li class="icon">
-            <a href="https://github.com/DevDuxAaron" target="blank" aria-label="to github" name="github"
+            <a
+              href="https://github.com/DevDuxAaron"
+              target="blank"
+              aria-label="to github"
+              name="github"
               ><i class="icon-github"></i
             ></a>
           </li>
@@ -203,3 +268,4 @@
     </footer>
   </body>
 </html>
+<!-- https://www.sketch.com/s/fc3e831c-210d-4adb-b46a-1a5712d3070e/a/qljZY2#Inspector -->
