update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <div class="title">
           <h3 class="title-3">SKILLS</h3>
         </div>
+        <!-- Add React JS -->
         <div class="badges">
           <div class="hability hab-1">
             <span class="hab-name">HTML 5</span>
@@ -168,16 +169,46 @@
               </h2>
               <p>
                 Project developed within a Platzi course. A web page for a Bitcoin and crypto currencies trading company.
-                 This page was developed with mobile first pattern. It's implemented from a Figma design and doesn't have any interactivy due to it's lacking 
-                 of Javascript.
+                 This page was developed with mobile first pattern. It's implemented from a Figma design and doesn't have any interactivy due to it's lacking of Javascript.
               </p>
               <h2>
                 Visit
                 <div class="border"></div>
               </h2>
               <div class="s-m">
-                <a href="https://devduxaaron.github.io/Batabit/" class="fab">Project finished</a>
-                <a href="https://github.com/DevDuxAaron/Batabit" class="fab">Github repository</a>
+                <a href="https://devduxaaron.github.io/Batabit/" class="fab" target="blank">Project finished</a>
+                <a href="https://github.com/DevDuxAaron/Batabit" class="fab" target="blank">Github repository</a>
+              </div>
+            </div>
+          </article>
+          <article class="project-card">
+            <div class="top-section">
+              <img src="./assets/projects/platzivideo.jpeg" />
+              <div class="menuicon">
+                <span class="s1"></span>
+                <span class="s2"></span>
+              </div>
+              <div class="card-name">
+                <span>PLatzi Video</span><br>
+                By Aaron
+              </div>
+            </div>
+            <div class="info-section">
+              <h2>
+                About
+                <div class="border"></div>
+              </h2>
+              <p>
+                Project developed within a Platzi course. A web page that simulates an streaming page.
+                 This page was developed with mobile first pattern. It's implemented with React JS.
+              </p>
+              <h2>
+                Visit
+                <div class="border"></div>
+              </h2>
+              <div class="s-m">
+                <!-- <a href="https://devduxaaron.github.io/PlatziVideo/" class="fab" target="blank">Project finished</a> -->
+                <a href="https://github.com/DevDuxAaron/platzivideo" class="fab" target="blank">Github repository</a>
               </div>
             </div>
           </article>
